--- a/.github/workflows/packer.yml
+++ b/.github/workflows/packer.yml
@@ -4,7 +4,7 @@ on:
   push:
     paths: 
       - '*.json'
-      - '.github/workflows/packer.yml
+      - '.github/workflows/packer.yml'
 
 jobs:
   build:
