--- a/.github/workflows/packer.yml
+++ b/.github/workflows/packer.yml
@@ -16,3 +16,7 @@ jobs:
     - uses: actions/checkout@v1
     - run: packer validate windows.json
     - run: packer build windows.json
+      env:
+        AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+        AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+        AWS_DEFAULT_REGION: ap-northeast-1
