--- a/.github/workflows/packer-in-directory.yml
+++ b/.github/workflows/packer-in-directory.yml
@@ -10,12 +10,7 @@ jobs:
   build:
 
     runs-on: ubuntu-latest
-    container:
-      image: docker://hashicorp/packer:1.4.3
-#       env:
-#         AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
-#         AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-#         AWS_DEFAULT_REGION: ap-northeast-1
+    container: docker://hashicorp/packer:1.4.3
 
     steps:
     - uses: actions/checkout@v1
